Fixed z-index on tablet for PIRATE-3843

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -337,10 +337,12 @@ pre {
 }
 
 .widget.extendednavigation ul {
-	@media @mobile {
-		padding-top: 70px;
+	@media @tablet {
 		position: relative;
 		z-index: 9999;
+	}
+	@media @mobile {
+		padding-top: 70px;
 	}
 	li {
 		@media @tablet {
